[gd_scene load_steps=13 format=3 uid="uid://bmbtqllw2ypjc"]

[ext_resource type="PackedScene" uid="uid://kg3x603pe2ss" path="res://EnemySheet.tscn" id="1_bdhe6"]
[ext_resource type="Script" path="res://Database/EnemyDatabase.gd" id="1_oki1l"]
[ext_resource type="FontFile" uid="uid://deqhew2apixpi" path="res://Fonts/GOTHICB.TTF" id="2_1phum"]
[ext_resource type="Theme" uid="uid://usptm04bxef0" path="res://Themes/FilteringSorting.tres" id="2_etg7m"]
[ext_resource type="Theme" uid="uid://be3xj0wqsh8kv" path="res://Themes/FilterWindow.tres" id="5_ofgan"]
[ext_resource type="PackedScene" uid="uid://bg2q2nt5lb8xs" path="res://Database/RarityFiltering.tscn" id="7_p2jkh"]
[ext_resource type="PackedScene" uid="uid://bvo7dlcc42sjo" path="res://Database/SizeFiltering.tscn" id="7_r2utg"]
[ext_resource type="PackedScene" uid="uid://vxjcml8k865s" path="res://Database/TraitFiltering.tscn" id="8_003v4"]
[ext_resource type="PackedScene" uid="uid://bxm3l24gj3syg" path="res://Database/NumbersFiltering.tscn" id="9_bo4n0"]
[ext_resource type="Script" path="res://Database/EnemyCreator.gd" id="10_v2lcj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt2bf"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0
bg_color = Color(0.525963, 0.605664, 0.728771, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.118581, 0.118581, 0.118581, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3nts"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.141176, 0.368627, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.695503, 0.695503, 0.695503, 1)

[node name="EnemyDatabase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oki1l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.92549, 0.898039, 1)

[node name="Database" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Database"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 6

[node name="SortingFiltering" type="HBoxContainer" parent="Database/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_etg7m")
theme_override_constants/separation = 12

[node name="SearchBar" type="LineEdit" parent="Database/MarginContainer/SortingFiltering"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme = ExtResource("5_ofgan")
placeholder_text = "Search by Name"

[node name="SortBy" type="Label" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1phum")
text = "Sort by:"

[node name="Button" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
text = "Name"

[node name="Button2" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
text = "Level"

[node name="Filters" type="Label" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_1phum")
text = "Filters:"

[node name="NumbersFilterButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Numbers"

[node name="RarityFilterButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Rarity"

[node name="SizeFilterButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Size"

[node name="SavesFilterButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Strongest / Weakest Saves"

[node name="TraitsFilterButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Traits"

[node name="ResetButton2" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("5_ofgan")
text = "Reset selection"

[node name="NewEnemyButton" type="Button" parent="Database/MarginContainer/SortingFiltering"]
layout_mode = 2
text = "Create new enemy"

[node name="DatabaseSheets" type="HBoxContainer" parent="Database"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemyList" type="ItemList" parent="Database/DatabaseSheets"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Database/DatabaseSheets"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="EnemySheet" parent="Database/DatabaseSheets/VBoxContainer" instance=ExtResource("1_bdhe6")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Database/DatabaseSheets/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="AddToCombatButton" type="Button" parent="Database/DatabaseSheets/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Add to Combat"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="SizeFilterMenu" parent="CenterContainer" instance=ExtResource("7_r2utg")]
visible = false
layout_mode = 2

[node name="RarityFilterMenu" parent="CenterContainer" instance=ExtResource("7_p2jkh")]
visible = false
layout_mode = 2

[node name="TraitFilterMenu" parent="CenterContainer" instance=ExtResource("8_003v4")]
visible = false
layout_mode = 2

[node name="NumbersFiltering" parent="CenterContainer" instance=ExtResource("9_bo4n0")]
visible = false
layout_mode = 2

[node name="EnemyCreator" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(800, 600)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kt2bf")
script = ExtResource("10_v2lcj")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EnemyCreator"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/EnemyCreator/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_a3nts")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameLine" type="LineEdit" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Max Thaumiel"
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Level"

[node name="LevelSpinbox" type="SpinBox" parent="CenterContainer/EnemyCreator/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = -99.0
max_value = 99.0
value = 8.0
rounded = true
alignment = 2

[node name="SaveSheetButton" type="Button" parent="CenterContainer/EnemyCreator/VBoxContainer"]
layout_mode = 2
text = "Save Sheet"

[connection signal="text_changed" from="Database/MarginContainer/SortingFiltering/SearchBar" to="." method="_on_search_bar_text_changed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/NumbersFilterButton" to="." method="_on_numbers_filter_button_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/RarityFilterButton" to="." method="_on_rarity_filter_button_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/SizeFilterButton" to="." method="_on_size_filter_button_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/TraitsFilterButton" to="." method="_on_traits_filter_button_pressed"]
[connection signal="pressed" from="Database/MarginContainer/SortingFiltering/NewEnemyButton" to="." method="_on_new_enemy_button_pressed"]
[connection signal="item_selected" from="Database/DatabaseSheets/EnemyList" to="." method="_on_enemy_list_item_selected"]
[connection signal="pressed" from="Database/DatabaseSheets/VBoxContainer/PanelContainer/AddToCombatButton" to="." method="_on_add_to_combat_button_pressed"]
[connection signal="apply_filter" from="CenterContainer/SizeFilterMenu" to="." method="_on_size_filter_menu_apply_filter"]
[connection signal="apply_filter" from="CenterContainer/RarityFilterMenu" to="." method="_on_rarity_filter_menu_apply_filter"]
[connection signal="apply_filter" from="CenterContainer/TraitFilterMenu" to="." method="_on_trait_filter_menu_apply_filter"]
[connection signal="apply_filter" from="CenterContainer/NumbersFiltering" to="." method="_on_numbers_filtering_apply_filter"]
[connection signal="sheet_created" from="CenterContainer/EnemyCreator" to="." method="_on_enemy_creator_sheet_created"]
[connection signal="pressed" from="CenterContainer/EnemyCreator/VBoxContainer/SaveSheetButton" to="CenterContainer/EnemyCreator" method="_on_save_sheet_button_pressed"]
